--- a/CitySimulator/CitySimulator.vcxproj.filters
+++ b/CitySimulator/CitySimulator.vcxproj.filters
@@ -105,18 +105,6 @@
     <ClCompile Include="Classes\Source files\Models\Entities\DormBuilding.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Classes\Source files\Models\Entities\Programmer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Classes\Source files\Models\Entities\Teacher.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Classes\Source files\Models\Entities\Unemployed.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Classes\Source files\Models\Entities\Miner.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Classes\Source files\Models\Entities\ModernBuilding.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -136,6 +124,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Classes\Header files\Models\Entities\ISerializable.h">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Source files\Models\Entities\Profession.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -245,19 +236,7 @@
     <ClInclude Include="Classes\Header files\Models\Entities\DormBuilding.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Classes\Header files\Models\Entities\Miner.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Classes\Header files\Models\Entities\ModernBuilding.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Classes\Header files\Models\Entities\Programmer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Classes\Header files\Models\Entities\Teacher.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Classes\Header files\Models\Entities\Unemployed.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Classes\Header files\Models\Commands\AddCommand.h">
@@ -273,6 +252,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Classes\Header files\Models\Commands\LoadCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Header files\Models\Entities\Profession.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
