--- a/CitySimulator/CitySimulator.vcxproj
+++ b/CitySimulator/CitySimulator.vcxproj
@@ -163,6 +163,10 @@
     <ClCompile Include="Classes\Source files\Models\Commands\RemoveCommand.cpp" />
     <ClCompile Include="Classes\Source files\Models\Commands\SaveCommand.cpp" />
     <ClCompile Include="Classes\Source files\Models\Entities\Profession.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\Miner.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\Programmer.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\Teacher.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\Unemployed.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\Header files\Models\Commands\AddCommand.h" />
@@ -207,6 +211,10 @@
     <ClInclude Include="Classes\Header files\Models\Commands\SaveCommand.h" />
     <ClInclude Include="Classes\Header files\Models\Commands\LoadCommand.h" />
     <ClInclude Include="Classes\Header files\Models\Entities\Profession.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\Miner.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\Programmer.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\Teacher.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\Unemployed.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
